<resources>
    <string name="app_name">PSSuccess</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enter_location">Enter Location</string>
    <string name="search">Search</string>
    <string name="nearest_university">Nearest University</string>
    <string name="name">Name</string>
    <string name="placeholder">--</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="view_on_map">View On Map</string>
</resources>