<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/enter_location"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginRight="21dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/enter_location"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/search"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:background="@drawable/button"
                android:text="@string/search"
                android:textColor="#000000"
                android:textSize="16sp"
                app:backgroundTint="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:id="@+id/nearest_university"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="21dp"
            android:layout_marginBottom="21dp"
            android:text="@string/nearest_university"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/name_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placeholder"
                android:textColor="#FFFFFF"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address"
                android:textColor="#FFFFFF"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/address_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placeholder"
                android:textColor="#FFFFFF"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="21dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginRight="14dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/next"
                android:textColor="#000000"
                android:textSize="16sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/view_map"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginLeft="14dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/view_on_map"
                android:textColor="#000000"
                android:textSize="16sp"
                app:backgroundTint="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>